--- a/public/dashboard-enhanced.html
+++ b/public/dashboard-enhanced.html
@@ -954,6 +954,7 @@
                             <button type="button" class="add-color-btn" onclick="addColor()">Add Color</button>
                         </div>
                         <div id="colorList" class="color-list"></div>
+                        <input type="hidden" id="coloursData" name="colours">
                     </div>
 
                     <!-- Multiple Size Selection -->
