--- a/public/category-api-tester.html
+++ b/public/category-api-tester.html
@@ -202,8 +202,8 @@
                 💪 Gym Wear
             </button>
 
-            <button class="category-btn" onclick="fetchCategoryProducts('fitness-wear')">
-                🏃 Fitness Wear
+            <button class="category-btn" onclick="fetchCategoryProducts('safety-wear')">
+                🦺 Safety Wear
             </button>
 
             <button class="category-btn" onclick="fetchCategoryProducts('streetwear')">
@@ -240,25 +240,35 @@
         // Category and subcategory structure (matching current database)
         const SUBCATEGORIES = {
             'sports-wear': [
-                'T-Shirts', 'Shorts', 'Jerseys', 'Uniforms', 'Tank Tops', 'Hoodies', 'Track Suits'
+                'American Football Uniform', 'Baseball Uniform', 'Basketball Uniform', 'Cheer Leading Uniform',
+                'Ice Hockey Uniform', 'Lacrosse Uniform', 'Rugby Uniforms', 'Volleyball Uniform',
+                'Netball Uniform', 'Cycling Uniform', 'T-Shirts', 'Tank Tops'
             ],
             'gym-wear': [
-                'Tank Tops', 'Leggings', 'Sports Bras', 'Gym Shorts', 'Hoodies', 'Tracksuits', 'Joggers'
+                'Leggings', 'Track Suits', 'Hoodies', 'Jogger Pants', 'Running Shorts',
+                'Fitness Bra', 'Yoga Sets', 'Rash Guard', 'Body Suits', 'Women Crop Tops',
+                'Tank Tops', 'Headwear and Accessories', 'Bags', 'tank-top'
             ],
-            'fitness-wear': [
-                'Yoga Sets', 'Compression Wear', 'Running Shorts', 'Fitness Tops', 'Athletic Wear'
+            'safety-wear': [
+                'Safety Jackets', 'Safety Trousers', 'Safety Shirts', 'High-Visibility Clothing',
+                'Anti-Static Clothing', 'Flame-Retardant Clothing'
             ],
             'streetwear': [
-                'T-Shirts', 'Hoodies', 'Sweatshirts', 'Casual Shorts', 'Joggers', 'Tank Tops'
+                'Onesies', 'Casual Shorts', 'Beach Shorts', 'Zipper Hoodies', 'Tie-Dye Hoodies',
+                'Sweatshirts', 'Flannel Shirts', 'Sweatpants & Bottoms', 'T-Shirts', 'Polo Shirts',
+                'Singlets & Tops'
             ],
             'fashion-wear': [
-                'Jackets', 'Casual Wear', 'Designer Tops', 'Fashion Accessories'
+                'Pull Over Jackets', 'Varsity Jackets', 'Puffers Jackets', 'Bomber Jackets',
+                'Soft Shell Jackets', 'Rain Jackets', 'Leather Jackets', 'Denim Jackets',
+                'Coach Jackets', 'Windbreaker Jackets'
             ],
             'mma-arts': [
-                'MMA Shorts', 'Rash Guards', 'MMA Gloves', 'Fighting Gear', 'Training Wear'
+                'Wrestling Gear', 'Judo Uniforms', 'Karate Uniforms', 'Kickboxing Gear',
+                'Brazilian Jiu-Jitsu (BJJ) Uniforms', 'T-Shirts'
             ],
             'accessories': [
-                'Bags', 'Caps', 'Socks', 'Gloves', 'Belts'
+                'Bags', 'Caps', 'Socks'
             ]
         };
 
@@ -374,13 +384,13 @@
 
             try {
                 const encodedSubcategory = encodeURIComponent(subcategory);
-                const response = await fetch(`/api/products/${category}/${encodedSubcategory}`);
+                const response = await fetch(`/api/products/subcategory/${category}/${encodedSubcategory}`);
                 const data = await response.json();
 
                 if (data.success) {
                     showResults(
                         `${subcategory} (${category.replace(/-/g, ' ')})`,
-                        `/api/products/${category}/${encodedSubcategory}`,
+                        `/api/products/subcategory/${category}/${encodedSubcategory}`,
                         data
                     );
                 } else {
