--- a/public/dashboard-enhanced.html
+++ b/public/dashboard-enhanced.html
@@ -859,6 +859,10 @@
         <div class="header">
             <h1>🏃‍♀️ PRISMATIC SPORTS Dashboard</h1>
             <p>Professional product management with advanced themes</p>
+            <button onclick="logout()"
+                style="position: absolute; top: 20px; right: 20px; padding: 10px 20px; background: var(--primary); color: var(--bg); border: none; border-radius: 8px; cursor: pointer; font-weight: 600;">
+                🔓 Logout
+            </button>
         </div>
 
         <div class="nav-tabs">
@@ -1220,6 +1224,18 @@
         let currentUpdateCategory = null;
         let currentDeleteCategory = null;
 
+        // Helper function to get auth headers
+        function getAuthHeaders() {
+            const token = localStorage.getItem('authToken');
+            if (!token) {
+                window.location.href = '/login';
+                return {};
+            }
+            return {
+                'Authorization': `Basic ${token}`
+            };
+        }
+
         // Category and subcategory structure
         const SUBCATEGORIES = {
             'sports-wear': [
@@ -1308,6 +1324,36 @@
             } else {
                 infoDiv.style.display = 'none';
             }
+        }
+
+        // Check authentication on page load
+        const authToken = localStorage.getItem('authToken');
+        if (!authToken) {
+            window.location.href = '/login';
+        }
+
+        // Validate session
+        fetch('/api/validate-session', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ token: authToken })
+        })
+            .then(res => res.json())
+            .then(data => {
+                if (!data.success) {
+                    localStorage.removeItem('authToken');
+                    window.location.href = '/login';
+                }
+            })
+            .catch(() => {
+                localStorage.removeItem('authToken');
+                window.location.href = '/login';
+            });
+
+        // Add logout functionality
+        function logout() {
+            localStorage.removeItem('authToken');
+            window.location.href = '/login';
         }
 
         // Initialize dashboard
@@ -1587,6 +1633,7 @@
             try {
                 const response = await fetch('/api/create-product', {
                     method: 'POST',
+                    headers: getAuthHeaders(),
                     body: formData
                 });
 
@@ -1625,7 +1672,9 @@
             container.innerHTML = '<div class="loading"></div>';
 
             try {
-                const response = await fetch('/api/products-json');
+                const response = await fetch('/api/products-json', {
+                    headers: getAuthHeaders()
+                });
                 const data = await response.json();
 
                 if (data.success) {
@@ -1690,7 +1739,9 @@
             try {
                 const url = `/api/products/category/${category}/manage`;
                 console.log('Fetching:', url);
-                const response = await fetch(url);
+                const response = await fetch(url, {
+                    headers: getAuthHeaders()
+                });
                 const data = await response.json();
                 console.log('API response:', data);
 
@@ -1734,7 +1785,9 @@
             container.innerHTML = '<div class="loading"></div>';
 
             try {
-                const response = await fetch(`/api/products/category/${category}/manage`);
+                const response = await fetch(`/api/products/category/${category}/manage`, {
+                    headers: getAuthHeaders()
+                });
                 const data = await response.json();
 
                 if (data.success && data.products.length > 0) {
@@ -1885,7 +1938,10 @@
                 try {
                     const response = await fetch(`/api/products/category/${category}/${productId}`, {
                         method: 'PUT',
-                        headers: { 'Content-Type': 'application/json' },
+                        headers: {
+                            'Content-Type': 'application/json',
+                            ...getAuthHeaders()
+                        },
                         body: JSON.stringify(updateData)
                     });
 
@@ -1929,7 +1985,8 @@
 
             try {
                 const response = await fetch(`/api/products/category/${category}/${productId}`, {
-                    method: 'DELETE'
+                    method: 'DELETE',
+                    headers: getAuthHeaders()
                 });
 
                 const result = await response.json();
